[package]
name = "strategic-communication"
version = "1.1.0"
authors = ["Steven Goldberg"]
edition = "2018"

[features]
llvm = ["inkwell"]

[dependencies]
clap = "3.0.0-beta.2"
regex = "1.3.9"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"], optional = true }
